# vqueue

./: .gitignore  Cargo.toml  build.rs
src/: api.rs  deque.rs  ipc_item.rs  lib.rs  slot_array.rs
test_vqueue/: Cargo.toml  Makefile  build.rs
test_vqueue/src/: main.rs  map.rs
