[package]
name = "vqueue"
version = "0.1.0"
edition = "2024"
description = "A queue management system, suitable for vDSO."

[dependencies]
lazyinit = "0.2.2"
vdso_helper = { git = "https://github.com/rosy233333/vdso_crate_template.git" }
# vdso_helper = { path = "../vdso_crate_template/vdso_helper" }

[build-dependencies]
vdso_helper = { git = "https://github.com/rosy233333/vdso_crate_template.git" }
# vdso_helper = { path = "../vdso_crate_template/vdso_helper" }

[features]
vdso = []
default = ["vdso"]
# default = []
