[package]
name = "test_vqueue"
version = "0.1.0"
edition = "2024"

[dependencies]
memmap2 = "0.9.5"
log = "0.4"
env_logger = "0.9"
xmas-elf = "0.9.0"
elf_parser = { git = "https://github.com/rosy233333/elf_parser.git" }
libc = "0.2"
page_table_entry = { git = "https://github.com/rosy233333/page_table_entry.git" }
include_bytes_aligned = "0.1.4"
libvqueue = { path = "../output/libvqueue" }

[build-dependencies]
build_vdso = { git = "https://github.com/rosy233333/vdso_crate_template.git" }
